# lumi-collaborative-filtering

./: .gitignore  PROGRESS.md  README.md  check_db.py  env.example  migrate_reels.py  pyproject.toml  requirements.txt  start.py  test_fix.py
app/: __init__.py
app/api/: deps.py  interactions.py  recommendations.py
app/jobs/: refresh_features.py
app/models/: __init__.py  models.py  schemas.py
app/services/: constants.py  feature_aggregation.py  ingest.py  matrix.py  metrics.py  post_candidates.py  preprocess.py  recommend_db.py  reel_candidates.py  scoring.py  time_utils.py
app/utils/: config.py  database.py  init_db.py  main.py
docs/: CF_API.md  CF_SYSTEM_STEPS.md  FEATURE_AGGREGATION.md  POST_RECOMMENDATION_STEPS.md  TROUBLESHOOTING.md
prisma/: schema.prisma
scratch/: inspect_table.py  list_tables.py
scripts/: setup_hourly_job.ps1
sql/: 001_user_interaction_events.sql
src/lumi_cf/: config.py  db.py  models.py
src/lumi_cf/api/: main.py  schemas.py
src/lumi_cf/api/routes/: __init__.py  events.py  recommend.py
src/lumi_cf/core/: constants.py  time.py
src/lumi_cf/services/: ingest.py  matrix.py  preprocess.py  recommend_db.py  scoring.py
